change the type of phone number input

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <input type="email" id="email" placeholder="Enter your email" minlength="2" required>
 
                     <label for="phone">Phone Number</label>
-                    <input type="phone" id="phone" placeholder="Enter your Phone Number" required>
+                    <input type="tel" id="phone" placeholder="Enter your Phone Number" required>
 
                     <label for="password">Password</label>
                     <input type="password" id="password" placeholder="Enter Password" minlength="8" required>
